--- a/style.css
+++ b/style.css
@@ -1,12 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 .new-book-form {
+  display: none;
+}
+
+.new-book-form.show {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   padding: 20px;
   width: min-content;
   border-radius: 10px;
@@ -14,9 +22,54 @@
   gap: 10px;
 }
 
+.new-book-form .form-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.new-book-form .close {
+  border: none;
+  height: 1em;
+  width: 1em;
+  background-color: transparent;
+  color: #aaa;
+  line-height: 0;
+}
+
+.new-book-form .close:hover {
+  color: #555;
+}
+
+.new-book-form li,
+.new-book-form input,
+.new-book-form button {
+  font-size: 1.2rem;
+}
+
 .new-book-form ul {
   display: flex;
   flex-direction: column;
   list-style: none;
   gap: 10px;
+}
+
+.new-book-form li {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.new-book-form input,
+.new-book-form .add-book {
+  padding: 5px;
+  border: 1px solid;
+  border-radius: 5px;
+}
+
+.new-book-form .add-book {
+  background-color: rgb(107, 187, 243);
+}
+
+.new-book-form .add-book:hover {
+  filter: brightness(110%);
 }
