--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 .new-book-form li,
 .new-book-form input,
 .new-book-form button {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .new-book-form ul {
@@ -72,4 +72,39 @@
 
 .new-book-form .add-book:hover {
   filter: brightness(110%);
+}
+
+.library-container {
+  margin: auto;
+  width: min(900px, 80%);
+}
+
+.library {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
+}
+
+.book {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #ddd;
+  gap: 10px;
+  list-style: none;
+}
+
+.book * {
+  font-size: 1.2rem;
+}
+
+.book .title {
+  font-weight: bold;
+}
+
+.book .pages {
+  font-style: italic;
 }
