Relocate form position on screen

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
 }
 
 .new-book-form.show {
+  position: absolute;
+  top: 50vh;
+  left: 50vw;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   justify-content: center;
