--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@
 
 .library {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: 1fr;
   gap: 10px;
 }
 
@@ -59,6 +60,7 @@
   justify-content: center;
   padding: 20px;
   width: min-content;
+  border: 2px solid #555;
   border-radius: 10px;
   background-color: #ddd;
   gap: 10px;
