--- a/style.css
+++ b/style.css
@@ -20,11 +20,12 @@
 }
 
 .book {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
+  position: relative;
   padding: 20px;
+  display: grid;
+  grid-template-rows: 1fr min-content min-content;
+  align-items: center;
+  text-align: center;
   border-radius: 10px;
   background-color: #ddd;
   gap: 10px;
@@ -42,6 +43,18 @@
 
 .pages {
   font-style: italic;
+}
+
+.remove {
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  background-color: rgb(255, 183, 183);
+  font-size: 1.2rem;
+}
+
+.remove:hover {
+  filter: brightness(110%);
 }
 
 /* NEW BOOK FORM STYLES */
@@ -103,17 +116,17 @@
   gap: 10px;
 }
 
-.new-book-form input,
 .new-book-form .add-book {
+  background-color: rgb(107, 187, 243);
+}
+
+.new-book-form input,
+.button {
   padding: 5px;
   border: 1px solid;
   border-radius: 5px;
 }
 
-.new-book-form .add-book {
-  background-color: rgb(107, 187, 243);
-}
-
-.new-book-form .add-book:hover {
+.button:hover {
   filter: brightness(110%);
 }
