--- a/style.css
+++ b/style.css
@@ -122,11 +122,12 @@
 
 .new-book-form input,
 .button {
-  padding: 5px;
-  border: 1px solid;
-  border-radius: 5px;
+  padding: 10px;
+  border: 2px solid #555;
+  border-radius: 8px;
 }
 
-.button:hover {
+button:hover {
   filter: brightness(110%);
+  cursor: pointer;
 }
