--- a/style.css
+++ b/style.css
@@ -7,16 +7,33 @@
   font-family: 'Roboto', sans-serif;
 }
 
+header {
+  padding: 0 calc((100vw - min(1200px, 80%)) / 2);
+  min-height: 150px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: grey;
+  font-size: x-large;
+}
+
 .page-container {
   margin: auto;
-  width: min(900px, 80%);
+  padding: 50px 0;
+  width: min(1200px, 80%);
+}
+
+.new-book {
+  width: max-content;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .library {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-auto-rows: 1fr;
-  gap: 10px;
+  gap: 40px;
 }
 
 .book {
@@ -26,8 +43,8 @@
   grid-template-rows: 1fr repeat(3, min-content);
   align-items: center;
   text-align: center;
+  border: 1px solid #999;
   border-radius: 10px;
-  background-color: #ddd;
   gap: 10px;
   list-style: none;
 }
@@ -81,7 +98,7 @@
   justify-content: center;
   padding: 20px;
   width: min-content;
-  border: 2px solid #555;
+  border: 1px solid #555;
   border-radius: 10px;
   background-color: #ddd;
   gap: 10px;
@@ -131,7 +148,7 @@
 .new-book-form input,
 .button {
   padding: 10px;
-  border: 2px solid #555;
+  border: 1px solid #555;
   border-radius: 8px;
 }
 
