--- a/style.css
+++ b/style.css
@@ -5,6 +5,24 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
+  color: var(--color-font-primary);
+}
+
+:root {
+  --color-background: #181d23;
+  --color-accent: #252d3a;
+  --color-font-primary: #ccc;
+  --color-unread: #35393c;
+  --color-bg-read: #3b4f4d;
+  --color-font-read: #60c097;
+  --color-bg-unread: #4f4f4f;
+  --color-font-unread: #c5c5c5;
+  --color-bg-remove: #4d383f;
+  --color-font-remove: #b45251;
+}
+
+body {
+  background-color: var(--color-background);
 }
 
 header {
@@ -13,7 +31,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: grey;
+  background-color: var(--color-accent);
   font-size: x-large;
 }
 
@@ -25,6 +43,9 @@ header {
 
 .new-book {
   width: max-content;
+  border: none;
+  background-color: var(--color-background);
+
   font-size: 1.5rem;
   font-weight: bold;
 }
@@ -43,7 +64,7 @@ header {
   grid-template-rows: 1fr repeat(3, min-content);
   align-items: center;
   text-align: center;
-  border: 1px solid #999;
+  background-color: var(--color-accent);
   border-radius: 10px;
   gap: 10px;
   list-style: none;
@@ -71,15 +92,19 @@ header {
 }
 
 .read {
-  background-color: rgb(183, 255, 177);
+  background-color: var(--color-bg-read);
+  color: var(--color-font-read);
+  transition: background-color 0.5s ease;
 }
 
 .read.unread {
-  background-color: rgb(107, 187, 243);
+  background-color: var(--color-bg-unread);
+  color: var(--color-font-unread);
 }
 
 .remove {
-  background-color: rgb(255, 183, 183);
+  background-color: var(--color-bg-remove);
+  color: var(--color-font-remove);
 }
 
 /* NEW BOOK FORM STYLES */
@@ -98,9 +123,8 @@ header {
   justify-content: center;
   padding: 20px;
   width: min-content;
-  border: 1px solid #555;
   border-radius: 10px;
-  background-color: #ddd;
+  background-color: var(--color-accent);
   gap: 10px;
 }
 
@@ -114,12 +138,12 @@ header {
   height: 1em;
   width: 1em;
   background-color: transparent;
-  color: #aaa;
+  color: var(--color-font-primary);
   line-height: 0;
 }
 
 .new-book-form .close:hover {
-  color: #555;
+  color: var(--color-font-primary);
 }
 
 .new-book-form li,
@@ -128,9 +152,17 @@ header {
   font-size: 1.1rem;
 }
 
+.new-book-form input,
+.new-book-form button {
+  background-color: var(--color-background);
+  border: none;
+  border-radius: 10px;
+}
+
 .new-book-form ul {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  place-items: center;
   list-style: none;
   gap: 10px;
 }
@@ -148,7 +180,6 @@ header {
 .new-book-form input,
 .button {
   padding: 10px;
-  border: 1px solid #555;
   border-radius: 8px;
 }
 
@@ -157,7 +188,6 @@ button:hover {
   cursor: pointer;
 }
 
-
 footer {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -165,7 +195,7 @@ footer {
   bottom: 0;
   position: fixed;
   width: 100%;
-  background-color: grey;
+  background-color: var(--color-accent);
   font-size: 20px;
   font-weight: 400;
 }
@@ -195,13 +225,11 @@ footer a,
 footer a:hover,
 footer a:visited,
 footer a:active {
-  color: white;
   text-decoration: none;
 }
 
 footer i {
   font-size: 1.6em;
-  color: white;
 }
 
 footer a.icon:hover {
@@ -215,7 +243,13 @@ footer a.circled i {
   width: 1.6em;
   height: 1.6em;
   border-radius: 0.8em;
-  background-color: white;
-  color: grey;
+  background-color: var(--color-font-primary);
+  color: var(--color-accent);
   font-size: 1em;
+}
+
+a:focus,
+button:focus,
+input:focus {
+  outline: 2px solid var(--color-font-primary);
 }
