Update focus outlines to visible for keyboard input only

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
   --color-background: #181d23;
   --color-accent: #252d3a;
   --color-font-primary: #ccc;
-  --color-unread: #35393c;
   --color-bg-read: #3b4f4d;
   --color-font-read: #60c097;
   --color-bg-unread: #4f4f4f;
@@ -45,14 +44,14 @@ header {
   width: max-content;
   border: none;
   background-color: var(--color-background);
-
   font-size: 1.5rem;
   font-weight: bold;
 }
 
 .library {
+  padding-bottom: 50px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-auto-rows: 1fr;
   gap: 40px;
 }
@@ -165,7 +164,7 @@ header {
 .new-book-form li,
 .new-book-form input,
 .new-book-form button {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
 }
 
 .new-book-form input,
@@ -190,7 +189,9 @@ header {
 }
 
 .new-book-form .add-book {
-  background-color: rgb(107, 187, 243);
+  background-color: var(--color-background);
+  color: var(--color-font-primary);
+  font-weight: bold;
 }
 
 .new-book-form input,
@@ -264,9 +265,8 @@ footer a.circled i {
   font-size: 1em;
 }
 
-a:focus,
-button:focus,
-input:focus {
+a:focus-visible,
+button:focus-visible,
+input:focus-visible {
   outline: 2px solid var(--color-font-primary);
 }
-
